--- a/src/main/js/html/read_the_word.html
+++ b/src/main/js/html/read_the_word.html
@@ -19,7 +19,7 @@
             <div class="colx3-right">
               <label>Version</label>
               <select data-ng-model="$ctrl.globalData.scriptureVersion" data-ng-change="$ctrl.getOrSearch()"
-                      data-ng-options="version for version in $ctrl.scriptureVersions"></select>
+                      data-ng-options="version for version in $ctrl.globalData.scriptureVersions"></select>
               <button data-ng-click="$ctrl.getOrSearch()">Show</button>
             </div>
           </div>
@@ -47,19 +47,19 @@
         <div data-ng-show="!$ctrl.searchShown">
           <p data-ng-repeat="script in $ctrl.scriptures">
             <span data-ng-show="script.showChapter">
-              <a href="" data-ng-click="biblicalCtrl.showScripture(script.version, script.book, script.chapter)">
-                {{script.book}} {{script.chapter}}</a>:</span><a href="" data-ng-click="biblicalCtrl.showScripture(script.version, script.book, script.chapter, script.verse)">{{script.verse}}</a>
+              <a href="" data-ng-click="$ctrl.showScripture(script.version, script.book, script.chapter)">
+                {{script.book}} {{script.chapter}}</a>:</span><a href="" data-ng-click="$ctrl.showScripture(script.version, script.book, script.chapter, script.verse)">{{script.verse}}</a>
             {{script.text}}
           </p>
         </div>
         <div data-ng-show="$ctrl.searchShown && $ctrl.searchResult">
           <h2>Search Results: {{$ctrl.searchResult.start}} to {{$ctrl.searchResult.end}} of {{$ctrl.searchResult.totalSize}}</h2>
           <p data-ng-repeat="group in $ctrl.searchResult.grouped">
-            <a href="" data-ng-click="biblicalCtrl.showScripture(group.version, group.book, group.chapter)">
-              {{group.book}} {{group.chapter}}</a>:<a href="" data-ng-click="biblicalCtrl.showScripture(group.version, group.book, group.chapter, group.verse)">{{group.verse}}</a>
+            <a href="" data-ng-click="$ctrl.showScripture(group.version, group.book, group.chapter)">
+              {{group.book}} {{group.chapter}}</a>:<a href="" data-ng-click="$ctrl.showScripture(group.version, group.book, group.chapter, group.verse)">{{group.verse}}</a>
             <span class="verse" data-ng-repeat="result in group.items">
               <br>
-              (<a href="" data-ng-click="biblicalCtrl.showScripture(result.version, result.book, result.chapter)">{{result.version}}</a>)
+              (<a href="" data-ng-click="$ctrl.showScripture(result.version, result.book, result.chapter)">{{result.version}}</a>)
               {{result.text}}
             </span>
           </p>
