--- a/src/main/js/html/scripture_selector.html
+++ b/src/main/js/html/scripture_selector.html
@@ -23,7 +23,7 @@
       <div class="columns">
         <label>Version</label>
         <select data-ng-model="$ctrl.globalData.version" data-ng-change="$ctrl.refresh()"
-                data-ng-options="version for version in $ctrl.scriptureVersions"></select>
+                data-ng-options="version for version in $ctrl.globalData.scriptureVersions"></select>
         <button class="float-right" data-ng-click="$ctrl.closeDialog()">Close</button>
       </div>
     </div>
