Moved scriptures, added 2 Enoch.

--- a/src/main/js/html/home.html
+++ b/src/main/js/html/home.html
@@ -6,11 +6,11 @@
         <h3>Who we are</h3>
         <p>
           The Mackabees Ministry was created out of love for the Most High Yahuwah to teach people about Him, His Son
-          Yahushi and His Commandments that are found in his Law which is called the Torah. We believe that keeping His
+          Yahushi and His Commandments that are found in His Law which is called the Torah. We believe that keeping His
           Commandments is how you show love for Him (<scripture ref="1 John 5:3"/>), We are not to even think the
           Messiah came to do away with His Commandments (<scripture ref="Matt 5:17"/>) and keeping them is a requirement
           for everlasting life (<scripture ref="Matt 19:16-19"/>). This website is a resource to be used for those that
-          are waking up to who they are to learn how to get inline with our Abba in order inherit the Kingdom.
+          are waking up to who they are to learn how to get inline with our Abba (Father) in order to inherit the Kingdom.
         </p>
         <h3>Resources</h3>
         <h4><a href="#/calendar?{{appCtrl.getIdTokenParameter()}}">Calendar<img src="images/icons/link_arrow.png"/></a></h4>
@@ -23,9 +23,9 @@
         <h4><a href="#/read_the_word?{{appCtrl.getIdTokenParameter()}}">Read the Word<img src="images/icons/link_arrow.png"/></a></h4>
         <p>
           Ability to read and search through all our books. With over 92 and growing different books and scrolls that
-          make up the Canon, Deuterocanon, Apocrypha and scrolls such as from the DeadSea. Gives access for all to learn
-          and grow. The entire collection is indexed making it searchable. Go ahead and try it, see what the New
-          Testament really says about
+          make up the Canon, Deuterocanon (second canon), Apocrypha and scrolls such as from the DeadSea. Gives access
+          for all to learn and grow. The entire collection is indexed making it searchable. Go ahead and try it, see
+          what the New Testament really says about
           <a href="http://localhost:63342/DD4-Biblical/target/DD4-Biblical-1.0/index.html#/read_the_word?reference=NT%20commandments">Commandments</a>
           and
           <a href="http://localhost:63342/DD4-Biblical/target/DD4-Biblical-1.0/index.html#/read_the_word?reference=NT%20Law">Law</a>.
@@ -47,7 +47,7 @@
           A timeline derived from scripture that counts from the first day of creation, it uses the Bible accounts of
           things like age of father upon son, years of life of individuals, year lapse of certain events and reigns of
           Kings. Information is pulled from all books and vetted by the Canon scriptures. A lot of work is done to make
-          sure dates of events make sense.
+          sure dates of events are the most accurate.
         </p>
       </div>
     </div>
