--- a/src/main/js/html/scripture_view.html
+++ b/src/main/js/html/scripture_view.html
@@ -1,4 +1,4 @@
-<div id="eventModal" style="display: block;">
+<div id="eventModal" style="display: block;position: absolute;left: 0px;" data-ng-style="$ctrl.style">
   <div class="modal-window block-border">
     <ul class="action-tabs right">
       <li>
