--- a/src/main/js/html/calendar.html
+++ b/src/main/js/html/calendar.html
@@ -68,7 +68,7 @@
   </div>
 
   <!-- Month selection dialog start -->
-  <div data-ng-show="$ctrl.dialogShown=='SELECT_MONTH'" id="monthSelectModal" style="display: block;">
+  <div data-ng-show="$ctrl.dialogShown=='SELECT_MONTH'" id="monthSelectModal" style="display:block; position:absolute; left:0px;" data-ng-style="$ctrl.dialogStyle">
     <div class="modal-window block-border">
       <ul class="action-tabs right">
         <li><a href="" data-ng-click="$ctrl.closeDialog()" title="Close window">
@@ -103,7 +103,7 @@
   <!-- Month selection dialog end -->
 
   <!-- Event view dialog start -->
-  <div data-ng-show="$ctrl.dialogShown=='VIEW_EVENT'" id="eventModal" style="display: block;">
+  <div data-ng-show="$ctrl.dialogShown=='VIEW_EVENT'" id="eventModal" style="display:block; position:absolute; left:0px;" data-ng-style="$ctrl.dialogStyle">
     <div class="modal-window block-border">
       <ul class="action-tabs right">
         <li>
@@ -140,7 +140,7 @@
   <!-- Event view dialog end -->
 
   <!-- Event edit dialog start -->
-  <div data-ng-show="$ctrl.dialogShown=='EDIT_EVENT'" id="editModal" style="display: block;">
+  <div data-ng-show="$ctrl.dialogShown=='EDIT_EVENT'" id="editModal" style="display:block; position:absolute; left:0px;" data-ng-style="$ctrl.dialogStyle">
     <div class="modal-window block-border">
       <ul class="action-tabs right">
         <li><a href="" data-ng-click="$ctrl.closeDialog()" title="Close window">
