--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,6 +55,7 @@
     <!-- Angular -->
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-bind-html-compile.min.js"></script>
+    <script src="js/lib/angular-cookies.min.js"></script>
     <script src="js/lib/angular-route.min.js"></script>
     <script src="js/lib/angular-sanitize.min.js"></script>
 
