--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,14 +70,14 @@
 
   <body data-ng-app="biblical" data-ng-controller="DD4AppCtrl as appCtrl">
     <div data-ng-controller="biblicalCtrl as biblicalCtrl">
-      <h2><a href="#/home?{{appCtrl.getIdTokenParameter()}}">Mackabees Ministry</a></h2>
-      | <a href="#/calendar?{{appCtrl.getIdTokenParameter()}}">Calendar</a>
-      | <a href="#/read_the_word?{{appCtrl.getIdTokenParameter()}}">Read the Word</a>
-      | <a href="#/the_law?{{appCtrl.getIdTokenParameter()}}">The Law</a>
-      | <a href="#/lessons?{{appCtrl.getIdTokenParameter()}}">Lessons</a>
-      | <a href="#/timeline?{{appCtrl.getIdTokenParameter()}}">Timeline</a>
+      <h2><a href="#/home">Mackabees Ministry</a></h2>
+      | <a href="#/calendar">Calendar</a>
+      | <a href="#/read_the_word">Read the Word</a>
+      | <a href="#/the_law">The Law</a>
+      | <a href="#/lessons">Lessons</a>
+      | <a href="#/timeline">Timeline</a>
       <span data-ng-if="appCtrl.globalData.runningLocal">
-        | <a href="#/utils?{{appCtrl.getIdTokenParameter()}}">Utilities</a>
+        | <a href="#/utils">Utilities</a>
       </span>
       |
       <!-- Content -->
