--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,6 +77,9 @@
       | <a href="#/lessons">Lessons</a>
       | <a href="#/timeline">Timeline</a>
       <span data-ng-if="appCtrl.globalData.runningLocal">
+        | <a href="#/games">Games</a>
+      </span>
+      <span data-ng-if="appCtrl.globalData.runningLocal">
         | <a href="#/utils">Utilities</a>
       </span>
       |
