Enabled ability to have scriptures in Hebrew added a few more books.

--- a/src/main/js/html/flashcards.html
+++ b/src/main/js/html/flashcards.html
@@ -20,8 +20,8 @@
         <p style="font-size: x-large;margin-bottom: .5em;">{{$ctrl.card.english}}</p>
         <h3>Samaritan</h3>
         <p style="font-size: x-large;margin-bottom: .5em;">{{$ctrl.card.samaritan}}</p>
-        <h3>Arabic</h3>
-        <p style="font-size: x-large;margin-bottom: .5em;">{{$ctrl.card.arabic}}</p>
+        <h3>Aramaic</h3>
+        <p style="font-size: x-large;margin-bottom: .5em;">{{$ctrl.card.aramaic}}</p>
         <h3>Value</h3>
         <p style="font-size: x-large;margin-bottom: .5em;">{{$ctrl.card.value}}</p>
         <h3>Meaning</h3>
