--- a/src/main/js/html/inline_scripture.html
+++ b/src/main/js/html/inline_scripture.html
@@ -5,13 +5,14 @@
     <a href="" data-ng-click="$ctrl.showScripture(scripture.version, scripture.book, scripture.chapter)">
       {{scripture.book}} {{scripture.chapter}}</a>:<a href="" data-ng-click="biblicalCtrl.showScripture(scripture.version, scripture.book, scripture.chapter, scripture.verse)">{{scripture.verse}}
     </a>
-    {{scripture.text}}
+    <span data-bind-html-compile="scripture.text"></span>
   </p>
   <p data-ng-repeat="group in $ctrl.scriptureGroups" dir="{{group.dir}}">
     <a href="" data-ng-click="$ctrl.showScripture(group.version, group.book, group.chapter)">
       {{group.book}} {{group.chapter}}</a>:<a href="" data-ng-click="$ctrl.showScripture(group.version, group.book, group.chapter, group.verse)">{{group.verse}}</a>
     <span data-ng-repeat="script in group.scriptures">
       <a href="" data-ng-if="script.verse != group.verse" data-ng-click="$ctrl.showScripture(script.version, script.book, script.chapter, script.verse)">{{script.verse}}</a>
-        {{script.text}}</span>
+      <span data-bind-html-compile="script.text"></span>
+    </span>
   </p>
 </div>
